Issue #13136: Adming invisible blocks fix.

--- a/sites/all/themes/slac/sass/_blocks.sass
+++ b/sites/all/themes/slac/sass/_blocks.sass
@@ -128,4 +128,17 @@ ul.blog-archive-class
           margin-right: 0
           float: none
 
+.with-right-sidebar .general-right.expand-full
+  @media screen and (min-width: 1200px)
+    width: 72.5%
+    .panels-ipe-editing &
+      width: 52.1259%
+.expand-hide
+  display: none
+  .panels-ipe-editing &
+    display: block
 
+
+//$only-tablet: 691px 893px
+//$tablet-with-small-desktop: 691px 1138px
+//$mobile-and_tablet: 0 690px
